# Hacettepe-Bachelor-CS-Degree

./: README.md
Algorithms ~ Java Assignments/Assignment 1/: Data.txt
Algorithms ~ Java Assignments/Assignment 2/: Main.java  OptimalESVDeploymentGP.java  OptimalPowerGridSolution.java  PowerGridOptimization.java  expected_output.txt
Algorithms ~ Java Assignments/Assignment 3/: Bond.java  Main.java  MissionGenesis.java  MissionSynthesis.java  MolecularData.java  MolecularStructure.java  Molecule.java  molecularData2.xml
Algorithms ~ Java Assignments/Assignment 4/: HyperloopTrainNetwork.java  Main.java  Point.java  Project.java  RouteDirection.java  Station.java  Task.java  TrainLine.java  UrbanInfrastructureDevelopment.java  UrbanTransportationApp.java  expected_output.txt  part_1_sample_input.xml
Algorithms ~ Java Assignments/Quiz 2/: Quiz2.java  sample_output_2.txt
Algorithms ~ Java Assignments/Quiz 3/: Quiz3.java
Algorithms ~ Java Assignments/Quiz graded 1/: Quiz1.java  asd.txt.txt
Algorithms ~ Java Assignments/csv reader/: CSVReaderExample.java
Data Structures ~ C++ Assignments/Assignment 3_NETWORKPROTOCOL/Assignment2/: CMakeLists.txt  Leaderboard.cpp  Leaderboard.h  LeaderboardEntry.h  leaderboard.txt
Data Structures ~ C++ Assignments/Assignment 3_NETWORKPROTOCOL/Assignment2/sampleIO/: run_commands.txt
Data Structures ~ C++ Assignments/Assignment 3_NETWORKPROTOCOL/src/: CMakeLists.txt  Makefile  NetworkLayerPacket.cpp  Packet.h  PhysicalLayerPacket.cpp  main.cpp
Data Structures ~ C++ Assignments/Assignment2_ADVNCDTETRIS/: BlockFall.h  main.cpp  (+2 more)
(+1464 files in other folders)
